--- a/Pages/Books/Index.cshtml
+++ b/Pages/Books/Index.cshtml
@@ -28,12 +28,20 @@
             <th>
                 @Html.DisplayNameFor(model => model.Book[0].Publisher.PublisherName)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Book[0].BookCategories)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Book) {
-        <tr>
+@foreach (var item in Model.BookD.Books) {
+    string selectedRow = "";
+    if(item.ID == Model.BookID)
+    {
+        selectedRow = "table-success";
+    }
+        <tr class="@selectedRow">
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
@@ -48,6 +56,14 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Publisher.PublisherName)
+            </td>
+            <td>
+                @{ 
+                    foreach(var category in item.BookCategories)
+                    {
+                        @category.Category.ID @: @category.Category.CategoryName <br/>
+                    }
+                }
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
